--- a/demo/app/client/templates/index.htm
+++ b/demo/app/client/templates/index.htm
@@ -2,6 +2,8 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <title>Paypal Checkout Integration Patterns</title>
 
     <link rel="stylesheet" href="/static/css/style.css">
