Ensure button is correctly centered in demo

--- a/demo/app/client/css/style.css
+++ b/demo/app/client/css/style.css
@@ -234,7 +234,7 @@ a.active .bullet {
 }
 
 .app .main .column-middle .demo .code iframe {
-    display: inline-block;
+    display: inline-block !important;
 }
 
 .app .main .column-right {
