--- a/src/components/button/componentTemplate.htm
+++ b/src/components/button/componentTemplate.htm
@@ -1,5 +1,5 @@
 <style>
-    body {
+    html, body {
         width: 100%;
         height: 100%;
         overflow: hidden;
@@ -13,24 +13,21 @@
         width: 100%;
         position: absolute;
         z-index: 10;
+        text-align: center;
     }
     .spinner .loader {
-        height: 20px;
-        width: 20px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        margin: -14px 0 0 -14px;
+        display: inline-block;
+        height: 60vmin;
+        width: 60vmin;
+        margin-top: 4vmin;
         opacity: 1;
         filter: alpha(opacity=100);
         -webkit-animation: rotation .7s infinite linear;
         -moz-animation: rotation .7s infinite linear;
         -o-animation: rotation .7s infinite linear;
         animation: rotation .7s infinite linear;
-        border-left: 4px solid rgba(0, 0, 0, .2);
-        border-right: 4px solid rgba(0, 0, 0, .2);
-        border-bottom: 4px solid rgba(0, 0, 0, .2);
-        border-top: 4px solid rgba(33, 128, 192, 0.8);
+        border: 16vmin solid rgba(0, 0, 0, .2);
+        border-top: 16vmin solid rgba(33, 128, 192, 0.8);
         border-radius: 100%;
     }
 
@@ -71,19 +68,3 @@
 <div class="spinner">
     <p id="loader" class="loader"></p>
 </div>
-
-<script>
-    (function() {
-
-        var loader = document.getElementById('loader');
-
-        var size   = Math.round(document.documentElement.scrollHeight * 0.4);
-        var border = Math.round(size * 0.2);
-        var margin = Math.round(border + (size / 2));
-
-        loader.style.height = loader.style.width = size + 'px';
-        loader.style.borderWidth = border + 'px';
-        loader.style.marginTop = loader.style.marginLeft = '-' + margin + 'px';
-
-    })();
-</script>
