--- a/src/funding/paylater/style.scoped.scss
+++ b/src/funding/paylater/style.scoped.scss
@@ -1,42 +1,49 @@
 $class-mark:                'paypal-mark';
 $class-button:              'paypal-button';
-$class-button-layout:       'paypal-button-layout';
 $class-text:                'paypal-button-text';
+$class-button-layout:       'paypal-button-layout';
 $button-layout-horizontal:  'horizontal';
 $button-layout-vertical:    'vertical';
 
 .#{$class-button} {
     .#{$class-text} {
+        display: inline-block;
         font-style: italic;
         font-weight: 600;
-    }
-
-    .message-large {
-        font-size: 1.1em;
-    }
-
-    .message-small {
-        font-size: 1.2em;
-        margin-top: -1px;
+        
+        &.text-large {
+            font-size: 1.1em;
+        }
+        
+        &.text-small {
+            font-size: 1.2em;
+            margin-top: -1px;
+        }
     }
 
     &.#{$class-button-layout}-#{$button-layout-vertical} {
-        .message-small {
-            display: none;
+        .#{$class-text} {
+            &.text-small {
+                display: none;
+            }
         }
     }
     
     &.#{$class-button-layout}-#{$button-layout-horizontal} {
-        .message-large {
-            display: none;
+        .#{$class-text} {
+            &.text-large {
+                display: none;
+            }
         }
         
         @media only screen and (min-width: 364px) {
-            .message-small {
-                display: none;
-            }
-            .message-large {
-                display: inline-block;
+            .#{$class-text} {
+                &.text-small {
+                   display: none;
+                }
+                &.text-large {
+                    display: inline-block;
+                }
             }
         }
     }
@@ -50,9 +57,9 @@ $button-layout-vertical:    'vertical';
         font-size: 14px;
         position: relative;
         top: -5px;
-    }
 
-    .message-small {
-        display: none;
+        &.text-small {
+            display: none;
+        }
     }
 }
