New wallet button design experiment

--- a/src/funding/paypal/style.scoped.scss
+++ b/src/funding/paypal/style.scoped.scss
@@ -38,7 +38,44 @@
             display: inline-block;
         }
 
-        .label, .divider, .card-art, .pay-now, .logo {
+        .label, .divider, .card-art, .pay-label, .logo {
+            display: none;
+        }
+    }
+}
+
+.wallet-label-new {
+    display: flex;
+    height: 100%;
+    text-align: left;
+
+    * {
+        display: inline-block;
+        vertical-align: top;
+        height: 100%;
+    }
+
+    .paypal-wordmark {
+        display: none;
+    }
+
+    .card-art {
+        border-radius: 3px;
+    }
+
+    .logo {
+        margin-left: auto;
+    }
+
+    @media only screen and (max-width: 150px) {
+        text-align: center;
+        display: inline-block;
+
+        .logo {
+            display: none;
+        }
+
+        .pay-label {
             display: none;
         }
     }
