--- a/src/funding/paypal/style.scoped.scss
+++ b/src/funding/paypal/style.scoped.scss
@@ -68,6 +68,24 @@
         margin-left: auto;
     }
 
+    .show-pay-label {
+        all: inherit;
+    }
+
+    .show-instruments-on-file {
+        margin: auto;
+        display: flex;
+    }
+
+    .fi-container {
+        display: flex;
+    }
+
+    .balance, .fi-logo, .fi-label {
+        display: flex;
+        align-items: center;
+    }
+
     @media only screen and (max-width: 150px) {
         text-align: center;
         display: inline-block;
